# Orderman-light-V2

./: .gitgnore  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/data/: db.ts
src/ui/: App.tsx  money.ts  print.ts  styles.css
