[package]
name = "orderman_light_v2"
version = "0.1.0"
description = "Orderman Light V2"
authors = ["You"]
edition = "2021"
build = "build.rs"

[lib]
name = "orderman_light_v2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
windows = { version = "0.54", features = ["Win32_Foundation", "Win32_Graphics_Printing", "Win32_Graphics_Gdi"] }

tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
